--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -1,3 +1,5 @@
+@import './../../styles.scss';
+
 .container {
     display: flex;
     height: 100vh;
@@ -5,18 +7,28 @@
 
 .left-layout {
     height: 100%;
-    width: 250px;
+    width: $leftWith;
     background-color: aqua;
 }
 
 .right-layout {
+    height: 100%;
     display: flex;
     flex-direction: column;
-    height: 100%;
-    width: calc(100% - 250px);
+    width: calc(100% - $leftWith);
     background-color: aquamarine;
 }
 
 .content {
-    height: calc(100% - 180px);
+    height: calc(100% - $heightHeader + $heightFooter);
+}
+
+@media only screen and (max-width: 768px) {
+    .left-layout {
+        display: none;
+    }
+
+    .right-layout {
+        width: 100%;
+    }
 }
