--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,6 +1,57 @@
 @import './../../../styles.scss';
 
 .header {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     height: $heightHeader;
-    background-color: bisque;
+    background-color: #ffffff;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    border-radius: 5px;
+
+    .left-header {
+        display: flex;
+        align-items: center;
+        margin-left: 10px;
+        width: 50%;
+        height: 100%;
+        border-bottom-left-radius: 5px;
+        border-top-left-radius: 5px;
+
+        .bars-icon {
+            display: none;
+        }
+
+        @media only screen and (max-width: 768px) {
+            .bars-icon {
+                display: block;
+            }
+        }
+    }
+
+    .rigth-header {
+        width: 50%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: end;
+        border-bottom-right-radius: 5px;
+        border-top-right-radius: 5px;
+        margin-right: 3cqh;
+
+        .header-avatar {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+        
+        .bell-icon {
+            margin-right: 15px;
+        }
+    }
 }
+
+
