--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,4 +1,11 @@
 <div class="sidebar">
+    <div class="logo-sidebar">
+        <img class="logo" src="./../../../assets/images/logo.svg" alt="">
+        <span class="logo-text">Academy</span>
+        <img class="arrow-left" src="./../../../assets/images/arrow-left-to-line.svg" alt="arrow-left">
+    </div>
+    <div class="sidebar__menu">
 
+    </div>
 </div>
 
