--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-$leftWith: 250px;
+$leftWith: 320px;
 $heightHeader: 70px;
 $heightFooter: 20px;
+$colorActive: #696cff;
 
 * {
     box-sizing: border-box;
