--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -5,3 +5,9 @@
     text-align: center;
     margin-bottom: 10px;
 }
+
+ @media only screen and (max-width: 768px) {
+    .footer {
+        display: none;
+    }
+ }
