--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -1,5 +1,46 @@
+@import "./../../../styles.scss";
+
 .sidebar{
+    display: flex;
+    flex-direction: column;
+    width: $leftWith;
     position: fixed;
     top: 0;
     left: 0;
+
+    .logo-sidebar {
+        width: $leftWith;
+        height: calc($heightHeader + 10px);
+        display: flex;
+        align-items: center;
+        position: relative;
+
+        .logo{ 
+            width: 40px;
+            height: 40px;
+            margin-left: 25px;
+        }
+
+        .logo-text{
+            padding: 20px 20px;
+            font-size: 30px;
+            font-weight: 600;
+            color: #566a7f;
+            text-transform: lowercase;
+        }
+        
+        .arrow-left {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            font-size: large;
+            right: 15px;
+            top: 15px;
+        }
+    }
+
+    .sidebar__menu {
+        width: 100%;
+        height: 100vh;
+    }
 }
