add layout logo

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,10 +1,10 @@
 <div class="header">
-    <div class="left-header">
-        <fa-icon icon="bars" class="bars-icon" [styles]="{height: '30px', width: '30px'}"></fa-icon>
+    <div class="left__header">
+        <fa-icon icon="bars" class="bars__icon" [styles]="{height: '30px', width: '30px'}"></fa-icon>
     </div>
-    <div class="rigth-header">
-        <fa-icon icon="bell" class="bell-icon" [styles]="{height: '30px', width: '30px'}"></fa-icon>
-        <img class="header-avatar" src="./../../../assets/images/avatar.png" alt="avatar">
+    <div class="rigth__header">
+        <fa-icon icon="bell" class="bell__icon" [styles]="{height: '30px', width: '30px'}"></fa-icon>
+        <img class="header__avatar" src="./../../../assets/images/avatar.png" alt="avatar">
     </div>
 </div>
 
