--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 $leftWith: 320px;
+$leftWithTablet: 250px;
 $heightHeader: 70px;
 $heightFooter: 20px;
 $colorActive: #696cff;
