--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -11,7 +11,7 @@
     margin-top: 10px;
     border-radius: 5px;
 
-    .left-header {
+    .left__header {
         display: flex;
         align-items: center;
         margin-left: 10px;
@@ -20,18 +20,18 @@
         border-bottom-left-radius: 5px;
         border-top-left-radius: 5px;
 
-        .bars-icon {
+        .bars__icon {
             display: none;
         }
 
         @media only screen and (max-width: 768px) {
-            .bars-icon {
+            .bars__icon {
                 display: block;
             }
         }
     }
 
-    .rigth-header {
+    .rigth__header {
         width: 50%;
         height: 100%;
         display: flex;
@@ -41,19 +41,19 @@
         border-top-right-radius: 5px;
         margin-right: 3cqh;
 
-        .header-avatar {
+        .header__avatar {
             width: 40px;
             height: 40px;
             border-radius: 50%;
             object-fit: cover;
         }
         
-        .bell-icon {
+        .bell__icon {
             margin-right: 15px;
         }
 
         @media only screen and (max-width: 768px) {
-            .bell-icon {
+            .bell__icon {
                 margin-right: 10px;
             }
         }
