--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-    <div class="left-layout">
+    <div class="left__layout">
         <app-sidebar></app-sidebar>
     </div>
-    <div class="right-layout">
+    <div class="right__layout">
         <app-header></app-header>
         <div class="content">
             <router-outlet></router-outlet>
