--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -1,6 +1,6 @@
 @import "./../../../styles.scss";
 
-.sidebar{
+.sidebar {
     display: flex;
     flex-direction: column;
     width: $leftWith;
@@ -8,7 +8,7 @@
     top: 0;
     left: 0;
 
-    .logo-sidebar {
+    .logo__sidebar {
         width: $leftWith;
         height: calc($heightHeader + 10px);
         display: flex;
@@ -19,23 +19,26 @@
             width: 40px;
             height: 40px;
             margin-left: 25px;
+            cursor: pointer;
         }
 
-        .logo-text{
+        .logo__text{
             padding: 20px 20px;
             font-size: 30px;
             font-weight: 600;
             color: #566a7f;
             text-transform: lowercase;
+            cursor: pointer;
         }
         
-        .arrow-left {
+        .arrow__left {
             position: absolute;
             width: 20px;
             height: 20px;
             font-size: large;
             right: 15px;
             top: 15px;
+            cursor: pointer;
         }
     }
 
