--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,11 +1,10 @@
-<div class="sidebar">
-    <div class="logo__sidebar">
-        <img class="logo" src="./../../../assets/images/logo.svg" alt="">
-        <span class="logo__text">Academy</span>
-        <img class="arrow__left" src="./../../../assets/images/arrow-left-to-line.svg" alt="arrow-left">
-    </div>
-    <div class="sidebar__menu">
+<div class="logo__sidebar">
+    <img class="logo_system" src="./../../../assets/images/logo.svg" alt="logo_system">
+    <span class="logo__text">Academy</span>
+    <img (click)="onCloseSidebar()" class="arrow__left" src="./../../../assets/images/arrow-left-to-line.svg" alt="arrow-left">
+</div>
 
-    </div>
+<div class="sidebar__menu">
+
 </div>
 
