--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -9,25 +9,46 @@
     height: 100%;
     width: $leftWith;
     background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    transition: right 1s ease-out;
+    transition: 1s ease-out;
+
+    &.close__left__sidebar {
+        left: -$leftWith;
+    }
 }
 
 .right__layout {
     flex: 1;
     height: 100%;
-    display: flex;
     flex-direction: column;
-    margin: 0 15px;
+    margin-left: calc($leftWith + 15px);
+    margin-right: 15px;
+    transition: margin 1s ease-out;
+
+    &.close__sidebar {
+        margin-left: 15px;
+    }
 }
 
 .content {
+    width: 100%;
     height: calc(100% - $heightHeader + $heightFooter);
 }
 
 @media only screen and (max-width: 768px) {
     .left__layout {
-        display: none;
+        left: -$leftWith;
+        &.close__left__sidebar {
+            left: 0;
+        }
     }
-
+    
     .right__layout {
         margin: 0 8px;
     }
