--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -1,49 +1,40 @@
 @import "./../../../styles.scss";
 
-.sidebar {
-    display: flex;
-    flex-direction: column;
+.logo__sidebar {
     width: $leftWith;
-    position: fixed;
-    top: 0;
-    left: 0;
+    height: calc($heightHeader + 10px);
+    display: flex;
+    align-items: center;
+    position: relative;
 
-    .logo__sidebar {
-        width: $leftWith;
-        height: calc($heightHeader + 10px);
-        display: flex;
-        align-items: center;
-        position: relative;
-
-        .logo{ 
-            width: 40px;
-            height: 40px;
-            margin-left: 25px;
-            cursor: pointer;
-        }
-
-        .logo__text{
-            padding: 20px 20px;
-            font-size: 30px;
-            font-weight: 600;
-            color: #566a7f;
-            text-transform: lowercase;
-            cursor: pointer;
-        }
-        
-        .arrow__left {
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            font-size: large;
-            right: 15px;
-            top: 15px;
-            cursor: pointer;
-        }
+    .logo_system{ 
+        width: 40px;
+        height: 40px;
+        margin: 0 26px;
+        cursor: pointer;
     }
 
-    .sidebar__menu {
-        width: 100%;
-        height: 100vh;
+    .logo__text{
+        padding: 20px 0;
+        font-size: 35px;
+        font-weight: 600;
+        color: #566a7f;
+        text-transform: lowercase;
+        cursor: pointer;
     }
+    
+    .arrow__left {
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        font-size: large;
+        right: 15px;
+        top: 15px;
+        cursor: pointer;
+    }
+}
+
+.sidebar__menu {
+    width: 100%;
+    height: 100vh;
 }
