--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -7,7 +7,7 @@
     align-items: center;
     position: relative;
 
-    .logo_system{ 
+    .logo_system { 
         width: 40px;
         height: 40px;
         margin: 0 26px;
@@ -38,3 +38,30 @@
     width: 100%;
     height: 100vh;
 }
+
+@media only screen and (max-width: 1281px) {
+    .logo__sidebar {
+        width: $leftWithTablet;
+
+        .logo_system {
+            width: 35px;
+            height: 35px;
+            margin: 0 20px;
+        }
+
+        .logo__text {
+            font-size: 30px;
+            font-weight: 600;
+        }
+
+        .arrow__left {
+            width: 20px;
+            height: 20px;
+            font-size: large;
+            right: 10px;
+            top: 10px;
+        }
+    }
+}
+
+
