configure ant design in source angular

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="logo__sidebar">
-    <img class="logo_system" src="./../../../assets/images/logo.svg" alt="logo_system">
+    <img class="logo_system" src="../../../assets/images/icons/logo.svg" alt="logo_system">
     <span class="logo__text">Academy</span>
-    <img (click)="onCloseSidebar()" class="arrow__left" src="./../../../assets/images/arrow-left-to-line.svg" alt="arrow-left">
+    <img (click)="onCloseSidebar()" class="arrow__left" src="../../../assets/images/icons/arrow-left-to-line.svg" alt="arrow-left">
 </div>
 
 <div class="sidebar__menu">
