--- a/src/app/pages/analytics/analytics.component.html
+++ b/src/app/pages/analytics/analytics.component.html
@@ -1,3 +1,7 @@
 <div class="analytics">
-    <p>analytics works!</p>
+    <nz-tabset class="tab__analytics">
+        <nz-tab nzTitle="Tab 1">Content of Tab Pane 1</nz-tab>
+        <nz-tab nzTitle="Tab 2">Content of Tab Pane 2</nz-tab>
+        <nz-tab nzTitle="Tab 3">Content of Tab Pane 3</nz-tab>
+    </nz-tabset>
 </div>
