--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,5 +16,5 @@ $colorActive: #696cff;
 body {
     min-height: 100vh;
     font-family: 'Poppins', sans-serif;
-    background-color: #f3f3f7;
+    background-color: #f3f3f7 !important;
 }
