--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,6 @@ $colorActive: #696cff;
 
 body {
     min-height: 100vh;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif !important;
     background-color: #f3f3f7 !important;
 }
