--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -10,7 +10,7 @@
     .logo_system { 
         width: 40px;
         height: 40px;
-        margin: 0 26px;
+        margin: 0 30px;
         cursor: pointer;
     }
 
@@ -19,6 +19,7 @@
         font-size: 35px;
         font-weight: 600;
         color: #566a7f;
+        margin-left: -10px;
         text-transform: lowercase;
         cursor: pointer;
     }
@@ -29,7 +30,7 @@
         height: 20px;
         font-size: large;
         left: calc($leftWith - 30px) ;
-        top: 10px;
+        top: 8px;
         cursor: pointer;
         transition: 1s ease-out;
     }
@@ -38,7 +39,35 @@
 .sidebar__menu {
     width: 100%;
     height: 100vh;
+
+    .menu__list{
+        display: flex;
+        flex-direction: column;
+        margin: 0 15px;
+
+        .menu__list__item {
+            background-color: #eef0f5;
+            display: flex;
+            align-items: center;
+            margin-top: 5px;
+            border-radius: 5px;
+            height: 45px;
+            padding: 0 25px;
+            color: #1890ff;
+
+            .icon__menu {
+
+                font-size: 20px;
+                font-weight: 700;
+            }
+            .text__menu {
+                margin-left: 30px;
+                font-weight: 600;
+            }
+        }
+    }
 }
+
 
 @media only screen and (max-width: 1281px) {
     .logo__sidebar {
@@ -57,6 +86,19 @@
 
         .arrow__left {
             left: calc($leftWithTablet - 30px);
+        }
+    }
+
+    .sidebar__menu {
+        .menu__list {
+            margin: 0 10px;
+            .menu__list__item {
+                padding: 0 20px;
+
+                .text__menu {
+                    margin-left: 15px;
+                }
+            }
         }
     }
 }
