config interceptor for source code

--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -15,5 +15,10 @@
             </a>
         </ng-container>
     </ul>
+
+    <div class="menu__botton">
+        <span class="logout__text">Logout</span>
+        <img class="logout__menu" src="../../../assets/images/icons/icon_share.svg" alt="">
+    </div>
 </div>
 
