--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -23,7 +23,7 @@
         text-transform: lowercase;
         cursor: pointer;
     }
-    
+
     .arrow__left {
         position: absolute;
         width: 20px;
@@ -39,6 +39,7 @@
 .sidebar__menu {
     width: 100%;
     height: 100vh;
+    position: relative;
 
     .menu__list{
         display: flex;
@@ -56,18 +57,42 @@
             color: #1890ff;
 
             .icon__menu {
-
                 font-size: 20px;
                 font-weight: 700;
             }
+
             .text__menu {
                 margin-left: 30px;
                 font-weight: 600;
             }
         }
     }
-}
 
+    .menu__botton {
+        position: absolute;
+        height: 50px;
+        background-color: #eef0f5;
+        width: 100%;
+        bottom: 80px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        right: 15px;
+        cursor: pointer;
+
+        .logout__text {
+            font-size: 25px;
+            font-weight: 500;
+            margin-right: 10px;
+            color: #1890ff;
+        }
+
+        .logout__menu {
+            color: #1890ff;
+            width: 23px;
+        }
+    }
+}
 
 @media only screen and (max-width: 1281px) {
     .logo__sidebar {
